# fable

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pull-request.yaml  tag-release.yaml
example/: custom-generator.py  example.py
src/: __init__.py  core.py
src/fable/: core.py  generators.py  models.py  types.py
tests/: test_core.py
tests/unit/: test_core.py  test_generators.py
