[project]
authors = [
  {name = "Jack Bonatakis", email = "jackbonataki@gmail.com"},
]
dependencies = [
  "faker",
  "polars",
  "pydantic",
]
description = ""
name = "fable"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "pytest",
  "ruff",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
